...
                        <connections>
                            <outlet property="dataSource" destination="BYZ-38-t0r" id="MJP-4G-2LT"/>
                            <outlet property="delegate" destination="BYZ-38-t0r" id="Rlz-g3-Ceb"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Recipe List" id="rdy-Ax-IHK">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="u8H-aQ-5St">
                            <connections>
                                <segue destination="Uv8-ld-5jE" kind="show" identifier="addView" id="i0E-ic-ugu"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Recipe title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H4L-rg-i9I">
                                <rect key="frame" x="0.0" y="103" width="320" height="30"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" hint="" label="addRecipeTitle"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Qoh-xJ-hlV"/>
                                </constraints>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="done"/>
...
                                </connections>
                            </button>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pQ1-0t-P6h">
                                <rect key="frame" x="0.0" y="158" width="320" height="198"/>
                                <animations/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" hint="" label="addRecipeContent"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" enablesReturnKeyAutomatically="YES"/>
                            </textView>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="sOE-ub-BUi">
                                <rect key="frame" x="141" y="238" width="37" height="37"/>
...
                                <rect key="frame" x="0.0" y="356" width="320" height="40"/>
                                <animations/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="jvx-PN-Gdw"/>
                                </constraints>
                                <state key="normal" title="Add">
                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="addButtonPressed:" destination="Uv8-ld-5jE" eventType="touchUpInside" id="djF-hA-lEF"/>
                                </connections>
                            </button>
...
